--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.13",
+    "expo-cli": "^6.3.10",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
@@ -25,10 +26,12 @@
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "^0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-swiper": "^1.6.0",
+    "react-native-web": "~0.19.6",
+    "twrnc": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
